<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.evently.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.evently.ui.fragments.FavoritesFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_my_events"
        android:name="com.example.evently.ui.fragments.MyEventsFragment"
        android:label="@string/nav_my_events"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.evently.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
